--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,6 @@ jobs:
     - uses: docker/build-push-action@v5
       with:
         context: .
-        load: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
         tags: ${{ steps.meta.outputs.tags }}
@@ -40,6 +39,7 @@ jobs:
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
         push: ${{ github.event_name != 'pull_request' && github.event_name != 'workflow_dispatch' }}
+    - run: docker image ls -a
     - run: docker save ${{ steps.meta.outputs.tags }} --output /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - uses: actions/upload-artifact@v4
       with:
