--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,17 +30,26 @@ jobs:
       with:
         images: ghcr.io/${{ github.repository }}/${{ matrix.dockerfile }}-dind
     - uses: docker/build-push-action@v5
+      if: ${{ github.event_name != 'pull_request' && github.event_name != 'workflow_dispatch' }}
       with:
         context: .
+        push: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-        push: ${{ github.event_name != 'pull_request' && github.event_name != 'workflow_dispatch' }}
-    - run: docker image ls -a
-    - run: docker save ${{ steps.meta.outputs.tags }} --output /tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
+    - uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: false
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
+        outputs: type=docker,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.dockerfile }}-dind-docker-image
