--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
         images: ghcr.io/${{ github.repository }}/http-dind
     - run: docker load --input /tmp/http-dind-docker-image.tar
     - run: docker image ls -a
-    - run: ipconfig
+    - run: ifconfig
     - id: connection-string
       run: echo "$(hostname -I)" >> "$GITHUB_OUTPUT"
     - run: |
@@ -167,6 +167,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: [docker-build]
     steps:
     - run: echo "${{ needs.http-docker-service.outputs.connection-string }}"
     - run: sleep 60
