--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-build]
     outputs:
-      connection-string: ${{ steps.connection-string.outputs.connection-string }}
+      connection_string: ${{ steps.connection-string.outputs.connection_string }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -101,7 +101,7 @@ jobs:
     - run: docker image ls -a
     - run: ifconfig
     - id: connection-string
-      run: echo "$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> "$GITHUB_OUTPUT"
+      run: echo "connection_string=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> "$GITHUB_OUTPUT"
     - run: |
         timeout 5m \
             docker run \
@@ -169,9 +169,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-build]
     steps:
-    - run: echo "${{ needs.http-docker-service.outputs.connection-string }}"
+    - run: echo "${{ needs.http-docker-service.outputs.connection_string }}"
     - run: sleep 60
-    - run: echo "${{ needs.http-docker-service.outputs.connection-string }}"
+    - run: echo "${{ needs.http-docker-service.outputs.connection_string }}"
 
 #   build:
 #     needs: docker-build
