--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,14 @@ jobs:
         images: ghcr.io/${{ github.repository }}/ssh-dind
     - run: docker load --input /tmp/ssh-dind-docker-image.tar
     - run: docker image ls -a
+    - run: ifconfig
+    - id: connection-string
+      run: echo "connection_string=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> /tmp/connection-string
+    - uses: actions/upload-artifact@v4
+      with:
+        path: /tmp/connection-string
+        name: ssh-docker-service-connection-string
+        if-no-files-found: error
     - run: |
         timeout 5m \
             docker run \
@@ -85,8 +93,6 @@ jobs:
   http-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
-    outputs:
-      connection_string: ${{ steps.connection-string.outputs.connection_string }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -99,9 +105,6 @@ jobs:
         images: ghcr.io/${{ github.repository }}/http-dind
     - run: docker load --input /tmp/http-dind-docker-image.tar
     - run: docker image ls -a
-    - run: ifconfig
-    - id: connection-string
-      run: echo "connection_string=$(ip addr show eth0 | grep "inet\b" | awk '{print $2}' | cut -d/ -f1)" >> "$GITHUB_OUTPUT"
     - run: |
         timeout 5m \
             docker run \
@@ -169,9 +172,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-build]
     steps:
-    - run: echo "${{ needs.http-docker-service.outputs.connection_string }}"
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: ssh-docker-service-connection-string
+    - run: cat /tmp/ssh-docker-service-connection-string
     - run: sleep 60
-    - run: echo "${{ needs.http-docker-service.outputs.connection_string }}"
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: ssh-docker-service-connection-string
+    - run: cat /tmp/ssh-docker-service-connection-string
 
 #   build:
 #     needs: docker-build
