--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -209,10 +209,33 @@ jobs:
         || true
 
   test:
-    runs-on: ubuntu-latest
     needs: [docker-build]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - run: sleep 30
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+            ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
+    - run: pnpm install
     - uses: actions/download-artifact@v4
       with:
         pattern: "*-service-connection-string"
@@ -226,33 +249,4 @@ jobs:
     - run: tailscale ping "$(cat http-docker-service-connection-string/connection-string)"
     - run: tailscale ping "$(cat https-docker-service-connection-string/connection-string)"
     - run: tailscale ping "$(cat socket-docker-service-connection-string/connection-string)"
-
-#   build:
-#     needs: docker-build
-#     runs-on: ${{ matrix.os }}
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         node-version: [16.x, 18.x, 20.x]
-#         os: [ubuntu-latest, macos-latest, windows-latest]
-#     steps:
-#     - uses: actions/checkout@v4
-#     - uses: actions/setup-node@v4
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - uses: pnpm/action-setup@v2
-#       with:
-#         version: 8
-#         run_install: false
-#     - name: Get pnpm store directory
-#       shell: bash
-#       run: |
-#         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-#     - uses: actions/cache@v3
-#       with:
-#         path: ${{ env.STORE_PATH }}
-#         key: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-#         restore-keys: |
-#             ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
-#     - run: pnpm install
-#     - run: pnpm build
+    # - run: pnpm build
