--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
+        "@octokit/rest": "^20.0.2",
         "@rushstack/eslint-config": "3.6.2",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
