--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -236,6 +236,7 @@ jobs:
         restore-keys: |
             ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
     - run: pnpm install
+    - run: GITHUB_RUN_ID=${{ github.run_id }} node test/ci-wait-for-artifacts.js
     - uses: actions/download-artifact@v4
       with:
         pattern: "*-service-connection-string"
