--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     // "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
 
     "compilerOptions": {
+        "checkJs": true,
         "pretty": true,
         "sourceMap": true,
         "declaration": true,
@@ -33,5 +34,5 @@
         "isolatedModules": true,
         "forceConsistentCasingInFileNames": true,
     },
-    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "bin/**/*.ts"],
+    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "bin/**/*.ts", "test/**/*.js"],
 }
