--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-unicorn": "50.0.1",
         "fast-check": "3.15.1",
+        "node-fetch": "^3.3.2",
         "node-loader": "^2.0.0",
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
