--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -236,7 +236,9 @@ jobs:
         restore-keys: |
             ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
     - run: pnpm install
-    - run: GITHUB_RUN_ID=${{ github.run_id }} node test/ci-wait-for-artifacts.js
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_RUN_ID: ${{ github.run_id }}
     - uses: actions/download-artifact@v4
       with:
         pattern: "*-service-connection-string"
@@ -246,6 +248,7 @@ jobs:
       run: |
         brew install tailscale
         brew services start tailscale
+        sleep 5s
     - uses: tailscale/github-action@v2
       if: ${{ runner.os == 'Linux'}}
       with:
