--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -248,7 +248,7 @@ jobs:
       run: |
         brew install tailscale
         brew services start tailscale
-        sleep 5s
+        sleep 5
     - uses: tailscale/github-action@v2
       if: ${{ runner.os == 'Linux'}}
       with:
