--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,6 +239,7 @@ jobs:
     - run: node test/ci-wait-for-artifacts.js
       env:
         GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/download-artifact@v4
       with:
         pattern: "*-service-connection-string"
