--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -247,9 +247,8 @@ jobs:
       run: choco install tailscale
     - if: ${{ runner.os == 'macOS' }}
       run: |
-        brew install tailscale
-        brew services start tailscale
-        sleep 5
+        go install tailscale.com/cmd/tailscale{,d}@v1.58.2
+        sudo $HOME/go/bin/tailscaled install-system-daemon
     - uses: tailscale/github-action@v2
       if: ${{ runner.os == 'Linux'}}
       with:
