--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -221,6 +221,9 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+    - uses: actions/setup-go@v5
+      with:
+        go-version: '^1.21'
     - uses: pnpm/action-setup@v2
       with:
         version: 8
@@ -249,6 +252,7 @@ jobs:
         tailscale.exe status
     - if: ${{ runner.os == 'macOS' }}
       run: |
+        go version
         go install tailscale.com/cmd/tailscale{,d}@v1.58.2
         sudo $HOME/go/bin/tailscaled install-system-daemon
         tailscale status
