--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -256,10 +256,9 @@ jobs:
         go install tailscale.com/cmd/tailscale{,d}@v1.58.2
         sudo $HOME/go/bin/tailscaled install-system-daemon
         export TS_EXPERIMENT_OAUTH_AUTHKEY=true
-        export HOSTNAME="github-$(cat /etc/hostname)"
         export TAGS_ARG="--advertise-tags=tag:tme-ci"
         export TAILSCALE_AUTHKEY="${{ secrets.TS_OAUTH_SECRET }}?preauthorized=true&ephemeral=true"
-        sudo -E tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY} --hostname=${HOSTNAME}
+        sudo -E tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY}
         tailscale status
     - uses: tailscale/github-action@v2
       if: ${{ runner.os == 'Linux'}}
