--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -249,7 +249,7 @@ jobs:
     - if: ${{ runner.os == 'Windows' }}
       run: |
         choco install tailscale -y
-        tailscale.exe status
+        'tailscale.exe' status
     - if: ${{ runner.os == 'macOS' }}
       run: |
         go version
@@ -258,7 +258,7 @@ jobs:
         export TS_EXPERIMENT_OAUTH_AUTHKEY=true
         export TAGS_ARG="--advertise-tags=tag:tme-ci"
         export TAILSCALE_AUTHKEY="${{ secrets.TS_OAUTH_SECRET }}?preauthorized=true&ephemeral=true"
-        sudo -E tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY}
+        sudo -E tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY} &
         tailscale status
     - uses: tailscale/github-action@v2
       if: ${{ runner.os == 'Linux'}}
