--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -258,8 +258,7 @@ jobs:
         /C/Program\ Files/Tailscale/tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY}
     - if: ${{ runner.os == 'macOS' }}
       run: |
-        go install tailscale.com/cmd/tailscale{,d}@v1.58.2
-        sudo $HOME/go/bin/tailscaled install-system-daemon
+        sudo brew install tailscale
         export TS_EXPERIMENT_OAUTH_AUTHKEY=true
         export TAGS_ARG="--advertise-tags=tag:tme-ci"
         export TAILSCALE_AUTHKEY="${{ secrets.TS_OAUTH_SECRET }}?preauthorized=true&ephemeral=true"
