--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,22 @@ jobs:
     needs: [docker-build]
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache/restore@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node18-pnpm-store-
+    - run: pnpm install
     - uses: actions/download-artifact@v4
       with:
         path: /tmp
@@ -83,22 +99,40 @@ jobs:
         path: /tmp/connection-string
         name: ssh-docker-service-connection-string
         if-no-files-found: error
-    - run: |
-        timeout 15m \
-            docker run \
-            --rm --privileged \
-            --ulimit nproc=-1 \
-            --ulimit core=-1 \
-            --pids-limit -1 \
-            --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }} \
-        || true
+    - run: docker run \
+        --rm --privileged --detach \
+        --ulimit nproc=-1 \
+        --ulimit core=-1 \
+        --pids-limit -1 \
+        --oom-score-adj -500 \
+        ${{ steps.meta.outputs.tags }}
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_ARTIFACT_COUNT: 9
+        GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   http-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache/restore@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node18-pnpm-store-
+    - run: pnpm install
     - uses: actions/download-artifact@v4
       with:
         path: /tmp
@@ -121,22 +155,40 @@ jobs:
         path: /tmp/connection-string
         name: http-docker-service-connection-string
         if-no-files-found: error
-    - run: |
-        timeout 15m \
-            docker run \
-            --rm --privileged \
-            --ulimit nproc=-1 \
-            --ulimit core=-1 \
-            --pids-limit -1 \
-            --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }} \
-        || true
+    - run: docker run \
+        --rm --privileged --detach \
+        --ulimit nproc=-1 \
+        --ulimit core=-1 \
+        --pids-limit -1 \
+        --oom-score-adj -500 \
+        ${{ steps.meta.outputs.tags }}
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_ARTIFACT_COUNT: 9
+        GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   https-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache/restore@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node18-pnpm-store-
+    - run: pnpm install
     - uses: actions/download-artifact@v4
       with:
         path: /tmp
@@ -159,22 +211,40 @@ jobs:
         path: /tmp/connection-string
         name: https-docker-service-connection-string
         if-no-files-found: error
-    - run: |
-        timeout 15m \
-            docker run \
-            --rm --privileged \
-            --ulimit nproc=-1 \
-            --ulimit core=-1 \
-            --pids-limit -1 \
-            --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }} \
-        || true
+    - run: docker run \
+        --rm --privileged --detach \
+        --ulimit nproc=-1 \
+        --ulimit core=-1 \
+        --pids-limit -1 \
+        --oom-score-adj -500 \
+        ${{ steps.meta.outputs.tags }}
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_ARTIFACT_COUNT: 9
+        GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   unix-socket-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache/restore@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node18-pnpm-store-
+    - run: pnpm install
     - uses: actions/download-artifact@v4
       with:
         path: /tmp
@@ -197,16 +267,18 @@ jobs:
         path: /tmp/connection-string
         name: socket-docker-service-connection-string
         if-no-files-found: error
-    - run: |
-        timeout 15m \
-            docker run \
-            --rm --privileged \
-            --ulimit nproc=-1 \
-            --ulimit core=-1 \
-            --pids-limit -1 \
-            --oom-score-adj -500 \
-            ${{ steps.meta.outputs.tags }} \
-        || true
+    - run: docker run \
+        --rm --privileged --detach \
+        --ulimit nproc=-1 \
+        --ulimit core=-1 \
+        --pids-limit -1 \
+        --oom-score-adj -500 \
+        ${{ steps.meta.outputs.tags }}
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_ARTIFACT_COUNT: 9
+        GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test:
     needs: [docker-build]
@@ -244,6 +316,7 @@ jobs:
     - run: pnpm install
     - run: node test/ci-wait-for-artifacts.js
       env:
+        GITHUB_ARTIFACT_COUNT: 8
         GITHUB_RUN_ID: ${{ github.run_id }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/download-artifact@v4
@@ -293,6 +366,14 @@ jobs:
       run: |
         sudo tailscale down
         sudo tailscale logout
-    - name: Setup tmate session
-      if: ${{ failure() }}
-      uses: mxschmitt/action-tmate@v3
+
+  stop-services:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+    - run: touch /tmp/stop-services
+    - uses: actions/upload-artifact@v4
+      with:
+        path: /tmp/stop-services
+        name: stop-services
+        if-no-files-found: error
