--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,13 +99,7 @@ jobs:
         path: /tmp/connection-string
         name: ssh-docker-service-connection-string
         if-no-files-found: error
-    - run: docker run \
-        --rm --privileged --detach \
-        --ulimit nproc=-1 \
-        --ulimit core=-1 \
-        --pids-limit -1 \
-        --oom-score-adj -500 \
-        ${{ steps.meta.outputs.tags }}
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
     - run: node test/ci-wait-for-artifacts.js
       env:
         GITHUB_ARTIFACT_COUNT: 9
@@ -155,13 +149,7 @@ jobs:
         path: /tmp/connection-string
         name: http-docker-service-connection-string
         if-no-files-found: error
-    - run: docker run \
-        --rm --privileged --detach \
-        --ulimit nproc=-1 \
-        --ulimit core=-1 \
-        --pids-limit -1 \
-        --oom-score-adj -500 \
-        ${{ steps.meta.outputs.tags }}
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
     - run: node test/ci-wait-for-artifacts.js
       env:
         GITHUB_ARTIFACT_COUNT: 9
@@ -211,13 +199,7 @@ jobs:
         path: /tmp/connection-string
         name: https-docker-service-connection-string
         if-no-files-found: error
-    - run: docker run \
-        --rm --privileged --detach \
-        --ulimit nproc=-1 \
-        --ulimit core=-1 \
-        --pids-limit -1 \
-        --oom-score-adj -500 \
-        ${{ steps.meta.outputs.tags }}
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
     - run: node test/ci-wait-for-artifacts.js
       env:
         GITHUB_ARTIFACT_COUNT: 9
@@ -267,13 +249,7 @@ jobs:
         path: /tmp/connection-string
         name: socket-docker-service-connection-string
         if-no-files-found: error
-    - run: docker run \
-        --rm --privileged --detach \
-        --ulimit nproc=-1 \
-        --ulimit core=-1 \
-        --pids-limit -1 \
-        --oom-score-adj -500 \
-        ${{ steps.meta.outputs.tags }}
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
     - run: node test/ci-wait-for-artifacts.js
       env:
         GITHUB_ARTIFACT_COUNT: 9
@@ -377,3 +353,9 @@ jobs:
         path: /tmp/stop-services
         name: stop-services
         if-no-files-found: error
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [stop-services, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    steps:
+    - run: echo "Publishing artifacts"
