--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -347,6 +347,7 @@ jobs:
   stop-services:
     runs-on: ubuntu-latest
     needs: [test]
+    if: always()
     steps:
     - run: touch /tmp/stop-services
     - uses: actions/upload-artifact@v4
@@ -357,6 +358,6 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [stop-services, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [test, stop-services, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
