--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
   ssh-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -109,6 +110,7 @@ jobs:
   http-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -159,6 +161,7 @@ jobs:
   https-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -209,6 +212,7 @@ jobs:
   unix-socket-docker-service:
     runs-on: ubuntu-latest
     needs: [docker-build]
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -358,6 +362,6 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [test, stop-services, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [test, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
