--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "the-moby-effect",
     "version": "1.43.0-alpha.4",
-    "description": "Docker daemon API client built using effect-ts",
+    "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
         "docker"
@@ -24,7 +24,7 @@
         "dist/package.json"
     ],
     "scripts": {
-        "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean"
+        "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean --config .jest.config.json"
     },
     "dependencies": {
         "ssh2": "~1.15.0"
