--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "dist/package.json"
     ],
     "scripts": {
-        "build": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean --config .jest.config.json"
+        "build": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean --config .jest.config.json"
     },
     "dependencies": {
         "ssh2": "~1.15.0"
@@ -49,6 +49,7 @@
         "@types/node": "20.11.13",
         "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
+        "cross-env": "^7.0.3",
         "effect": "2.2.3",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
