--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -260,7 +260,7 @@ jobs:
         GITHUB_RUN_ID: ${{ github.run_id }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  test:
+  docker-engine-tests:
     needs: [docker-build]
     runs-on: ${{ matrix.os }}
     defaults:
@@ -270,7 +270,8 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest, macos-beta]
+        docker-engine: [v1, v2, v3, v4, v5, v6]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -340,12 +341,6 @@ jobs:
         tailscale ping "$(cat http-docker-service-connection-string/connection-string)"
         tailscale ping "$(cat https-docker-service-connection-string/connection-string)"
         tailscale ping "$(cat socket-docker-service-connection-string/connection-string)"
-    - run: pnpm build
-      env:
-        SSH_DOCKER_SERVICE: "$(cat ssh-docker-service-connection-string/connection-string)"
-        HTTP_DOCKER_SERVICE: "$(cat http-docker-service-connection-string/connection-string)"
-        HTTPS_DOCKER_SERVICE: "$(cat https-docker-service-connection-string/connection-string)"
-        SOCKET_DOCKER_SERVICE: "$(cat socket-docker-service-connection-string/connection-string)"
     - if: ${{ runner.os == 'Windows' }}
       run: |
         /C/Program\ Files/Tailscale/tailscale down
@@ -355,9 +350,37 @@ jobs:
         sudo tailscale down
         sudo tailscale logout
 
+  docker-desktop-tests:
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+        os: [ubuntu-latest, macos-latest, windows-latest, macos-beta]
+        docker-desktop: [v1, v2, v3, v4, v5, v6]
+    steps:
+    - uses: actions/checkout@v4
+
+  podman-desktop-tests:
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+        os: [ubuntu-latest, macos-latest, windows-latest, macos-beta]
+        podman-desktop: [v1, v2, v3, v4, v5, v6]
+    steps:
+    - uses: actions/checkout@v4
+
   stop-services:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [docker-engine-tests]
     if: always()
     steps:
     - run: touch /tmp/stop-services
@@ -370,7 +393,7 @@ jobs:
   publish-pre-release:
     runs-on: ubuntu-latest
     environment: "NPM pre-release"
-    needs: [test, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [docker-desktop-tests, docker-engine-tests, podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
 
@@ -378,6 +401,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
     environment: "NPM official-release"
-    needs: [test, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [docker-desktop-tests, docker-engine-tests, podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
