--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -260,8 +260,35 @@ jobs:
         GITHUB_RUN_ID: ${{ github.run_id }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  docker-engine-tests:
+  remote-docker-engine-services-starts:
+    runs-on: ubuntu-latest
     needs: [docker-build]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: false
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+    - uses: actions/cache/restore@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node18-pnpm-store-
+    - run: pnpm install
+    - run: node test/ci-wait-for-artifacts.js
+      env:
+        GITHUB_ARTIFACT_COUNT: 8
+        GITHUB_RUN_ID: ${{ github.run_id }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  remote-docker-engine-tests:
+    needs: [docker-build, remote-docker-engine-services-starts]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -271,7 +298,7 @@ jobs:
       matrix:
         node-version: [16.x, 18.x, 20.x]
         os: [ubuntu-latest, macos-latest, windows-latest, macos-beta]
-        docker-engine: [v1, v2, v3, v4, v5, v6]
+        docker-engine: [ssh, http, https]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -350,8 +377,9 @@ jobs:
         sudo tailscale down
         sudo tailscale logout
 
-  docker-desktop-tests:
+  local-docker-desktop-tests:
     runs-on: ${{ matrix.os }}
+    needs: [remote-docker-engine-tests]
     defaults:
       run:
         shell: bash
@@ -364,8 +392,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-  podman-desktop-tests:
+  local-podman-desktop-tests:
     runs-on: ${{ matrix.os }}
+    needs: [remote-docker-engine-tests]
     defaults:
       run:
         shell: bash
@@ -380,7 +409,7 @@ jobs:
 
   stop-services:
     runs-on: ubuntu-latest
-    needs: [docker-engine-tests]
+    needs: [remote-docker-engine-tests]
     if: always()
     steps:
     - run: touch /tmp/stop-services
@@ -393,7 +422,7 @@ jobs:
   publish-pre-release:
     runs-on: ubuntu-latest
     environment: "NPM pre-release"
-    needs: [docker-desktop-tests, docker-engine-tests, podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [local-docker-desktop-tests, remote-docker-engine-tests, local-podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
 
@@ -401,6 +430,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
     environment: "NPM official-release"
-    needs: [docker-desktop-tests, docker-engine-tests, podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
+    needs: [local-docker-desktop-tests, remote-docker-engine-tests, local-podman-desktop-tests, http-docker-service, https-docker-service, ssh-docker-service, unix-socket-docker-service]
     steps:
     - run: echo "Publishing artifacts"
