--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,5 @@
         "isolatedModules": true,
         "forceConsistentCasingInFileNames": true,
     },
-    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "bin/**/*.ts", "test/**/*.js"],
+    "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", "bin/**/*.ts", "test/**/*.js", ".github/**/*.js"],
 }
