--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
         "ssh2": "~1.15.0"
     },
     "devDependencies": {
+        "@actions/artifact": "^2.1.1",
+        "@actions/core": "^1.10.1",
+        "@actions/exec": "^1.1.1",
+        "@actions/github": "^6.0.0",
+        "@actions/io": "^1.1.3",
         "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
@@ -49,6 +54,7 @@
         "@types/node": "20.11.13",
         "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
+        "@types/uuid": "^9.0.8",
         "cross-env": "^7.0.3",
         "effect": "2.2.3",
         "eslint": "8.56.0",
@@ -63,6 +69,7 @@
         "prettier-plugin-packagejson": "2.4.10",
         "tar-fs": "3.0.4",
         "typescript": "5.3.3",
+        "uuid": "^9.0.1",
         "webpack": "5.82.1",
         "ws": "8.16.0"
     },
