--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
         "ssh2": "~1.15.0"
     },
     "devDependencies": {
-        "@actions/artifact": "^2.1.1",
-        "@actions/core": "^1.10.1",
-        "@actions/exec": "^1.1.1",
-        "@actions/github": "^6.0.0",
-        "@actions/io": "^1.1.3",
+        "@actions/artifact": "2.1.1",
+        "@actions/core": "1.10.1",
+        "@actions/exec": "1.1.1",
+        "@actions/github": "6.0.0",
+        "@actions/io": "1.1.3",
         "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
@@ -43,7 +43,7 @@
         "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
-        "@octokit/rest": "^20.0.2",
+        "@protobuf-ts/runtime": "2.9.3",
         "@rushstack/eslint-config": "3.6.2",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
@@ -54,22 +54,21 @@
         "@types/node": "20.11.13",
         "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
-        "@types/uuid": "^9.0.8",
-        "cross-env": "^7.0.3",
+        "@types/uuid": "9.0.8",
+        "cross-env": "7.0.3",
         "effect": "2.2.3",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-unicorn": "50.0.1",
         "fast-check": "3.15.1",
-        "node-fetch": "^3.3.2",
-        "node-loader": "^2.0.0",
+        "node-loader": "2.0.0",
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.4.10",
         "tar-fs": "3.0.4",
         "typescript": "5.3.3",
-        "uuid": "^9.0.1",
+        "uuid": "9.0.1",
         "webpack": "5.82.1",
         "ws": "8.16.0"
     },
