--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
         "@actions/artifact": "2.1.1",
         "@actions/core": "1.10.1",
         "@actions/exec": "1.1.1",
-        "@actions/github": "6.0.0",
-        "@actions/io": "1.1.3",
         "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
@@ -44,6 +42,7 @@
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
         "@protobuf-ts/runtime": "2.9.3",
+        "@protobuf-ts/runtime-rpc": "^2.9.3",
         "@rushstack/eslint-config": "3.6.2",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
