--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.4.10",
+        "stun": "^2.1.0",
         "tar-fs": "3.0.4",
         "typescript": "5.3.3",
         "uuid": "9.0.1",
