--- a/.github/workflows/workflow-level-service/stop/action.yml
+++ b/.github/workflows/workflow-level-service/stop/action.yml
@@ -1,5 +1,5 @@
-name: 'Workflow level service - Stop'
-description: 'Stops a workflow level service'
+name: "Workflow level service - Stop"
+description: "Stops a workflow level service"
 
 inputs:
   service-identifier:
@@ -7,5 +7,11 @@ inputs:
     required: true
 
 runs:
-  using: 'node20'
-  main: 'stop.js'
+  using: "composite"
+  steps:
+    - uses: actions/upload-artifact@v4
+      with:
+        name: ${{ input.service-identifier }}_stop
+        path: ${{ input.service-identifier }}_stop
+        retention-days: 1
+        if-no-files-found: ignore
