--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -8,7 +8,7 @@ inputs:
   node-version:
     description: "Node.js version"
     required: true
-    default: 18
+    default: "18.x"
 
 runs:
   using: "composite"
