--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -31,3 +31,5 @@ runs:
       run: pnpm install
     - shell: bash
       run: node .github/workflows/workflow-level-service/expose/expose.js
+      with:
+        service-identifier: ${{ inputs.service-identifier }}
